# OpenGL_journey_1

./: .gitignore  CMakeLists.txt  README.MD
main/: CMakeLists.txt
main/include/: my_exe.h
main/src/: main.cpp
my_lib/: CMakeLists.txt
my_lib/include/: my_lib.h
my_lib/src/: my_lib.cpp
